test_data/typeerror/core-38605.py
code = ensure_pin_format(code)
pairing = await self.finish_pairing(code)